Changes for FindBugs issues.